--- a/Solution/MarketMonitor.Database/MarketMonitor.Database.csproj
+++ b/Solution/MarketMonitor.Database/MarketMonitor.Database.csproj
@@ -48,6 +48,8 @@
     <Content Include="rh.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\any\020 Load OrderStatus.sql" />
+    <Content Include="Scripts\any\010 Load OrderSide.sql" />
     <Content Include="Scripts\up\0010 Create Database Objects.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -59,9 +61,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\any\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(ProjectDir)"</PostBuildEvent>
